--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.1",
 	"description": "A robust iso-8859-14 encoder/decoder written in JavaScript.",
 	"homepage": "http://mths.be/iso-8859-14",
-	"main": "iso885914.js",
+	"main": "iso-8859-14.js",
 	"keywords": [
 		"codec",
 		"decoder",
@@ -32,7 +32,7 @@
 	},
 	"files": [
 		"LICENSE-MIT.txt",
-		"iso885914.js"
+		"iso-8859-14.js"
 	],
 	"directories": {
 		"test": "tests"
