--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
 	"keywords": [
 		"codec",
 		"decoder",
+		"decoding",
 		"encoder",
+		"encoding",
 		"legacy",
+		"legacy-encoding",
 		"iso-8859-14",
 		"iso8859-14",
 		"iso885914"
