--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
 		"iso-8859-14.js"
 	],
 	"scripts": {
-		"test": "node tests/tests.js",
-		"build": "node scripts/transform-data.js"
+		"download": "curl https://encoding.spec.whatwg.org/index-iso-8859-14.txt > data/index.txt",
+		"build": "node scripts/transform-data.js",
+		"test": "node tests/tests.js"
 	},
 	"devDependencies": {
 		"coveralls": "^2.11.6",
