Use JavaScript modules

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.1.0",
 	"description": "A robust iso-8859-14 encoder/decoder written in JavaScript.",
 	"homepage": "https://mths.be/iso-8859-14",
-	"main": "iso-8859-14.js",
+	"exports": "iso-8859-14.mjs",
 	"keywords": [
 		"codec",
 		"decoder",
@@ -28,13 +28,13 @@
 	"bugs": "https://github.com/mathiasbynens/iso-8859-14/issues",
 	"files": [
 		"LICENSE-MIT.txt",
-		"iso-8859-14.js"
+		"iso-8859-14.mjs"
 	],
 	"scripts": {
 		"download": "curl https://encoding.spec.whatwg.org/index-iso-8859-14.txt > data/index.txt",
 		"build": "node scripts/transform-data.js",
-		"test": "node tests/tests.js",
-		"cover": "istanbul cover --report html --verbose --dir coverage tests/tests.js"
+		"test": "node tests/tests.mjs",
+		"cover": "istanbul cover --report html --verbose --dir coverage tests/tests.mjs"
 	},
 	"devDependencies": {
 		"istanbul": "^0.4.2",
