--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 	"bugs": "https://github.com/mathiasbynens/iso-8859-14/issues",
 	"files": [
 		"LICENSE-MIT.txt",
-		"iso-8859-14.mjs"
+		"iso-8859-14.mjs",
+		"iso-8859-14.d.ts"
 	],
+	"types": "iso-8859-14.d.ts",
 	"scripts": {
 		"download": "curl https://encoding.spec.whatwg.org/index-iso-8859-14.txt > data/index.txt",
 		"build": "node scripts/transform-data.js",
